[package]
name = "proka-acpi"
version = "6.1.1"
authors = ["zhangxuan2011"]
repository = "https://github.com/zhangxuan2011/acpi"
description = "A pure-Rust library for interacting with ACPI (FIXME)"
categories = ["hardware-support", "no-std"]
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
log = "0.4.20"
spinning_top = "0.3.0"
pci_types = "0.10.0"
byteorder = { version = "1.5.0", default-features = false }

[features]
default = ["alloc", "aml"]
alloc = []
aml_nonstrict = ["aml"]
aml = ["alloc"]
